--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
         "spatie/crawler": "^4.7",
-        "spatie/laravel-sitemap": "^5.8"
+        "spatie/laravel-sitemap": "^5.8",
+      "ext-curl": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
